Feature: feature flags and webpush notifications (#2541)
* Add the scaffolding for WebPush notifications

We now send the user one when they get a new achievement

* Update README.md

* PHP Automatic Fixing (Pint & Rector)

* Automatic linting (Prettier and eslint)

* Changed sql schema (artisan dump)

* Publish the webpush config file

* PHP Automatic Fixing (Pint & Rector)

* Add Laravel Pennant to put the webpush functionality behind a feature flag

* Update features.blade.php

* Changed sql schema (artisan dump)

* Update features.blade.php

* Automatic linting (Prettier and eslint)

* Update features.blade.php

* Remove test code

* PHP Automatic Fixing (Pint & Rector)

--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,9 @@
         "anhskohbo/no-captcha": "^3.7",
         "spatie/laravel-medialibrary": "^11.13",
         "league/flysystem-sftp-v3": "^3.30",
-        "laravel/wayfinder": "^0.1.12"
+        "laravel/wayfinder": "^0.1.12",
+        "laravel-notification-channels/webpush": "^10.4",
+        "laravel/pennant": "^1.18"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
