--- a/.env.dev
+++ b/.env.dev
@@ -108,6 +108,15 @@ PUSHER_APP_SECRET=app-secret
 PUSHER_APP_CLUSTER=eu
 PUSHER_SCHEME=http
 
+GARAGE_KEY=
+GARAGE_SECRET=
+GARAGE_DRIVER=s3
+GARAGE_REGION=garage
+GARAGE_BUCKET=laravel
+GARAGE_ENDPOINT=http://garage:3900
+GARAGE_WEB_URL='http://laravel.web.garage.localhost:3902'
+GARAGE_USE_PATH_STYLE=true
+
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
