--- a/.github/workflows/fix-php.yml
+++ b/.github/workflows/fix-php.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run Rector
         run: |
           mkdir -p .tmp/rector
-          vendor/bin/rector --ansi --cache-directory .tmp/rector
+          vendor/bin/rector --ansi
 
       - name: Cache Pint
         uses: actions/cache@v4
@@ -42,7 +42,7 @@ jobs:
 
       - name: Run Pint
         run: |
-          vendor/bin/pint --parallel --cache-file=.tmp/.pint.cache
+          vendor/bin/pint --parallel
 
       - name: Generate Typescript
         run: |
