--- a/.github/workflows/fix-php.yml
+++ b/.github/workflows/fix-php.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: 🔍 Read Env
         run: grep -E 'PHP_VERSION' .env.prod >> $GITHUB_ENV
