--- a/.github/workflows/lint-and-build-frontend.yml
+++ b/.github/workflows/lint-and-build-frontend.yml
@@ -30,6 +30,12 @@ jobs:
         with:
           commit_message: Automatic linting (Prettier and eslint)
 
+      - name: 📥 Download WayFinder Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: wayfinder-actions
+          path: resources/js/
+
       - name: 🔨 build front-end
         run: |
           npm run build
