Add the pest tests for the non-browser group

--- a/.github/workflows/fix-php.yml
+++ b/.github/workflows/fix-php.yml
@@ -59,6 +59,7 @@ jobs:
             resources/js/actions
             resources/js/routes
             resources/js/wayfinder
+          if-no-files-found: error
           retention-days: 1
 
       - name: Commit changes
