--- a/.github/workflows/run-pest-tests.yml
+++ b/.github/workflows/run-pest-tests.yml
@@ -33,6 +33,12 @@ jobs:
         with:
           composer-options: "--ignore-platform-reqs --optimize-autoloader --prefer-dist"
 
+      - name: 📥 Download Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: compiled-assets
+          path: public/build/
+
       - name: Cache Pest test results
         uses: actions/cache@v4
         with:
