--- a/.github/workflows/lint-and-build-frontend.yml
+++ b/.github/workflows/lint-and-build-frontend.yml
@@ -1,49 +1,54 @@
 name: Lint and build front end JS
 on:
-  workflow_call:
+    workflow_call:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+              with:
+                  ref: ${{ github.head_ref }}
 
-      - name: 🔍 Read Env
-        run: grep -E 'NODE_VERSION' .env.prod >> $GITHUB_ENV
+            - name: 🔍 Read Env
+              run: grep -E 'NODE_VERSION' .env.prod >> $GITHUB_ENV
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: npm
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: ${{ env.NODE_VERSION }}
+                  cache: npm
 
-      - run: npm ci --ignore-scripts
+            - run: npm ci --ignore-scripts
 
-      - name: Lint & Fix
-        run: |
-          npx eslint resources/ --fix
-          npx prettier --write resources/
+            - name: Run eslint
+              run: |
+                  npx eslint resources/ --fix
+                  npx prettier --write resources/
 
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: Automatic linting (Prettier and eslint)
+            - name: Run Prettier
+              run: |
+                git fetch origin master:master
+                git diff --diff-filter=MA --name-only master... -- resources | xargs -r npx prettier --write
 
-      - name: 📥 Download WayFinder Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: wayfinder-actions
-          path: resources/js/
+            - name: Commit changes
+              uses: stefanzweifel/git-auto-commit-action@v5
+              with:
+                  commit_message: Automatic linting (Prettier and eslint)
 
-      - name: 🔨 build front-end
-        run: |
-          npm run build
+            - name: 📥 Download WayFinder Artifact
+              uses: actions/download-artifact@v4
+              with:
+                  name: wayfinder-actions
+                  path: resources/js/
 
-      - name: 📤 Upload Build Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: compiled-assets
-          path: public/build/
-          if-no-files-found: error
-          retention-days: 1
+            - name: 🔨 build front-end
+              run: |
+                  npm run build
+
+            - name: 📤 Upload Build Artifact
+              uses: actions/upload-artifact@v4
+              with:
+                  name: compiled-assets
+                  path: public/build/
+                  if-no-files-found: error
+                  retention-days: 1
