--- a/.github/workflows/run-pest-tests.yml
+++ b/.github/workflows/run-pest-tests.yml
@@ -3,8 +3,11 @@ on:
 
 jobs:
     pest:
-        name: 🐘 Pest Tests
+        name: 🐘 Pest Tests (Shard ${{ matrix.shard }}/2)
         runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            shard: [ 1, 2 ]
         services:
             mysql:
                 image: mariadb:10.6
@@ -68,7 +71,7 @@ jobs:
                   php artisan key:generate
                   php artisan migrate
                   php artisan passport:keys
-                  vendor/bin/pest --ci --parallel --exclude-group=browser
+                  vendor/bin/pest --ci --parallel --exclude-group=browser --shard ${{ matrix.shard }}/2
 
             - name: Check if laravel caching works
               run: |
