--- a/.github/workflows/lint-and-build-frontend.yml
+++ b/.github/workflows/lint-and-build-frontend.yml
@@ -27,7 +27,8 @@ jobs:
 
             - name: Run Prettier
               run: |
-                git diff --diff-filter=MA --name-only master... -- resources | xargs -r npx prettier --write
+                git fetch origin master --depth=1
+                git diff --diff-filter=MA --name-only origin/master... -- resources | xargs -r npx prettier --write
 
             - name: Commit changes
               uses: stefanzweifel/git-auto-commit-action@v5
