--- a/.github/workflows/lint-and-build-frontend.yml
+++ b/.github/workflows/lint-and-build-frontend.yml
@@ -29,14 +29,14 @@ jobs:
               uses: actions/cache@v4
               with:
                 path: .tmp/prettier
-                key: ${{ runner.os }}-prettier-${{ hashFiles('**/package-lock.json') }}-${{ github.run_id }}
+                key: ${{ runner.os }}-prettier-${{ hashFiles('**/package-lock.json', '.prettierrc*') }}
                 restore-keys: |
-                  ${{ runner.os }}-prettier-${{ hashFiles('**/package-lock.json') }}-
+                  ${{ runner.os }}-prettier-${{ hashFiles('**/package-lock.json', '.prettierrc*') }}
                   ${{ runner.os }}-prettier-
 
             - name: Run Prettier
               run: |
-                npx prettier resources/ --write --cache --cache-location=.tmp/prettier --cache-strategy metadata
+                npx prettier resources/ --write --cache --cache-location=.tmp/prettier --cache-strategy content
 
             - name: Commit changes
               uses: stefanzweifel/git-auto-commit-action@v5
