--- a/.github/workflows/fix-php.yml
+++ b/.github/workflows/fix-php.yml
@@ -19,6 +19,8 @@ jobs:
                   php-version: ${{ env.PHP_VERSION }}
 
             - uses: ramsey/composer-install@v3
+              with:
+                composer-options: '--ignore-platform-reqs --optimize-autoloader --prefer-dist'
 
             - name: Cache Rector
               uses: actions/cache@v4
