--- a/.env.dev
+++ b/.env.dev
@@ -108,8 +108,8 @@ PUSHER_APP_SECRET=app-secret
 PUSHER_APP_CLUSTER=eu
 PUSHER_SCHEME=http
 
-GARAGE_KEY=
-GARAGE_SECRET=
+GARAGE_KEY='Key ID'
+GARAGE_SECRET='Secret key'
 GARAGE_DRIVER=s3
 GARAGE_REGION=garage
 GARAGE_BUCKET=laravel
