Add a differentiator between the public and private drive

--- a/.env.dev
+++ b/.env.dev
@@ -113,6 +113,7 @@ GARAGE_SECRET='Secret key'
 GARAGE_DRIVER=s3
 GARAGE_REGION=garage
 GARAGE_BUCKET=laravel
+GARAGE_BUCKET_PUBLIC=laravel-public
 GARAGE_ENDPOINT=http://garage:3900
 GARAGE_WEB_URL='http://laravel.web.garage.localhost:3902'
 GARAGE_USE_PATH_STYLE=true
