--- a/.env.prod
+++ b/.env.prod
@@ -58,7 +58,8 @@ SPOTIFY_PASTYEARS_PLAYLIST=PastYearsPlaylistId
 SPOTIFY_RECENT_PLAYLIST=RecentPlayListId
 
 SENTRY_DSN=https://xyz:xyz@sentry.io/123
-SENTRY_PUBLIC_DNS=https://foo:bar@sentry.io/123
+SENTRY_PUBLIC_DSN=https://foo:bar@sentry.io/123
+SENTRY_TRACES_SAMPLE_RATE=0.1
 
 PRINTER_HOST=printer.proto.utwente.nl
 PRINTER_PORT=12345
