--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@fortawesome/fontawesome-free": "^7.0.0",
         "@popperjs/core": "^2.11.4",
         "@radix-icons/vue": "^1.0.0",
+        "@sentry/browser": "^10.36.0",
         "@tanstack/vue-table": "^8.21.3",
         "@vueuse/core": "^14.0.0",
         "bootstrap": "^5.3.0",
