Add Sentry to the csp and to Inertia

--- a/.env.dev
+++ b/.env.dev
@@ -61,8 +61,8 @@ SPOTIFY_ALLTIME_PLAYLIST=AllTimePlayListId
 SPOTIFY_PASTYEARS_PLAYLIST=PastYearsPlaylistId
 SPOTIFY_RECENT_PLAYLIST=RecentPlayListId
 
-SENTRY_DSN=https://xyz:xyz@sentry.io/123
-SENTRY_PUBLIC_DSN=https://foo:bar@sentry.io/123
+SENTRY_DSN=
+SENTRY_PUBLIC_DSN=
 SENTRY_TRACES_SAMPLE_RATE=1
 
 PRINTER_HOST=printer.proto.utwente.nl
