--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@popperjs/core": "^2.11.4",
         "@radix-icons/vue": "^1.0.0",
         "@sentry/browser": "^10.36.0",
+        "@sentry/vue": "^10.36.0",
         "@tanstack/vue-table": "^8.21.3",
         "@vueuse/core": "^14.0.0",
         "bootstrap": "^5.3.0",
@@ -44,7 +45,7 @@
         "leaflet": "^1.9.4",
         "leaflet-geosearch": "^4.2.0",
         "leaflet.markercluster": "^1.5.3",
-        "lucide-vue-next": "^0.563.0",
+        "lucide-vue-next": ">=0.563.0",
         "moment": "^2.29.2",
         "radix-vue": "^1.9.13",
         "reka-ui": "^2.5.1",
