--- a/staging/docker-compose.staging.yml
+++ b/staging/docker-compose.staging.yml
@@ -4,7 +4,7 @@ services:
         build:
             context: .
             dockerfile: staging/Dockerfile
-        environment:
+        args:
             NODE_VERSION: 22
             PHP_VERSION: 8.4
         volumes:
