Fix header sizes

--- a/staging/nginx.conf
+++ b/staging/nginx.conf
@@ -25,6 +25,11 @@ server {
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
         fastcgi_hide_header X-Powered-By;
+
+        # FastCGI buffer tuning (fix "upstream sent too big header")
+        fastcgi_buffer_size 32k;
+        fastcgi_buffers 16 32k;
+        fastcgi_busy_buffers_size 64k;
     }
 
     location ~ /\.(?!well-known).* {
