Fix db branch name

--- a/staging/.env.staging
+++ b/staging/.env.staging
@@ -14,6 +14,8 @@ REDIRECT_ASSETS_DOMAIN=
 
 TRUSTED_PROXIES='*'
 
+DB_DATABASE=db_${COOLIFY_BRANCH//[\"\/]/_}
+
 CACHE_DRIVER=file
 SESSION_DRIVER=database
 QUEUE_DRIVER=database
