--- a/staging/Dockerfile
+++ b/staging/Dockerfile
@@ -88,6 +88,8 @@ RUN chown -R www-data:www-data storage
 
 RUN cp staging/.env.staging .env
 
+ENTRYPOINT ["sh", "staging/entrypoint.sh"]
+
 EXPOSE 3000
 
 CMD ["sh", "-c", "php-fpm -D && nginx -g 'daemon off;'"]
