--- a/.env.dev
+++ b/.env.dev
@@ -115,7 +115,7 @@ GARAGE_REGION=garage
 GARAGE_BUCKET=laravel
 GARAGE_BUCKET_PUBLIC=laravel-public
 GARAGE_ENDPOINT=http://garage:3900
-GARAGE_WEB_URL='http://laravel.web.garage.localhost:3902'
+GARAGE_WEB_URL='http://laravel-public.web.garage.localhost:3902'
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
