--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
             - redis
     mariadb:
         container_name: '${SAIL_CONTAINER_NAME}-mariadb'
-        image: 'mariadb:10.6'
+        image: 'mariadb:lts'
         ports:
             - '${SAIL_SQL_PORT:-3306}:3306'
         environment:
@@ -60,7 +60,7 @@ services:
         ports:
             - '${SAIL_PMA_PORT}:80'
         environment:
-            - 'PMA_HOST=mariadb'
+            - 'PMA_HOST=${SAIL_CONTAINER_NAME}-mariadb'
             - 'PMA_USER=${DB_USERNAME}'
             - 'PMA_PASSWORD=${DB_PASSWORD}'
             - 'PMA_PORT=${SAIL_SQL_PORT}'
