--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@laravel/vite-plugin-wayfinder": "^0.1.7",
         "@nabla/vite-plugin-eslint": "^2.0.6",
         "@rushstack/eslint-patch": "^1.12.0",
+        "@sentry/vite-plugin": "^4.9.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/postcss": "^4.1.10",
         "@tailwindcss/typography": "^0.5.13",
