Temporarily add the env variables

--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -9,6 +9,9 @@ jobs:
   pest:
     name: 🐘 Pest Tests
     runs-on: ubuntu-latest
+    env:
+      SENTRY_ORG: sa-proto
+      SENTRY_PROJECT: sa-proto-website
     services:
       mysql:
         image: mariadb:10.6
