Add form generation to the wayfinder command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
       - name: 📥 Install front-end dependencies
         run: npm ci --ignore-scripts
 
-      - run: php artisan wayfinder:generate
+      - run: php artisan wayfinder:generate --with-form
 
       - name: 🔨 build front-end
         env:
