Feature: add Garage (#2554)
* Start working on using garage to self host our files

* Start working on the readme

* Update README

* Add a differentiator between the public and private drive

* Remove default .env values from garage setup

* Change the check to both include the public and the garage-public drives

* Only push the photo conversions to stack

* PHP Automatic Fixing (Pint & Rector)

* Let the CSP reflect the URL in the .env

* Fix the .env.dev url

* Delete init-garage.sh

* PHP Automatic Fixing (Pint & Rector)

* Update the phototest to reflect the new behaviour

* Add the env variables to .env.prod

* Automatic garage setup

* Fix the grep check from setup_garage.sh when layout does not exist

* Fix the double LAYOUT_EXISTS

* Update README.md

Co-authored-by: Menke Veerman <43108191+Menkveld-24@users.noreply.github.com>

* Break out the app-proto.assets-domain check into multiple variables

* Add chmod+x to the setup garage command

* Revert "Temporarily remove the medium conversion of a Photo to preserve space"

This reverts commit 7caff9d9475b6dbdbad626ef824fd5880efcaf95.

* PHP Automatic Fixing (Pint & Rector)

* Reapply "Temporarily remove the medium conversion of a Photo to preserve space"

This reverts commit 95a1ad2caa1c6a12c39d055fa10bdbfeb347f133.

* PHP Automatic Fixing (Pint & Rector)

---------

Co-authored-by: Menkveld <menke.veerman@gmail.com>
Co-authored-by: Menke Veerman <43108191+Menkveld-24@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
         "league/flysystem-sftp-v3": "^3.30",
         "laravel/wayfinder": "^0.1.12",
         "laravel-notification-channels/webpush": "^10.4",
-        "laravel/pennant": "^1.18"
+        "laravel/pennant": "^1.18",
+        "league/flysystem-aws-s3-v3": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
