--- a/.env.dev
+++ b/.env.dev
@@ -109,6 +109,14 @@ PUSHER_APP_SECRET=app-secret
 PUSHER_APP_CLUSTER=eu
 PUSHER_SCHEME=http
 
+GARAGE_KEY='Key ID'
+GARAGE_SECRET='Secret key'
+GARAGE_REGION=garage
+GARAGE_BUCKET=laravel
+GARAGE_BUCKET_PUBLIC=laravel-public
+GARAGE_ENDPOINT=http://garage:3900
+GARAGE_WEB_URL='http://laravel-public.web.garage.localhost:3902'
+
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
