--- a/.github/workflows/assign_project.yml
+++ b/.github/workflows/assign_project.yml
@@ -3,11 +3,8 @@ name: 📌 Assign Project
 on:
   issues:
     types: [ opened ]
-  pull_request:
+  pull_request_target:
     types: [ opened ]
-
-env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   assign_to_project:
